# stone_ocr_dl

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: debug.yaml  resnet34.yaml  resnet34_att.yaml  resnet34_att_freeze.yaml  resnet34_ensemble.yaml  resnet34_freeze.yaml  resnet34_resnet.yaml  resnet34_unetpp.yaml  resnet34_unetpp_freeze.yaml
scripts/: perform_ocr.py  visualize_dataloader.py
src/stone_ocr/analyze/: analyze_class_distibution.py  analyze_predictions.py
src/stone_ocr/datamodules/: datamodules.py
src/stone_ocr/eval/: ensemble_predict.py  eval_confmat.py  eval_confmat_ensemble.py
src/stone_ocr/models/: att_unet.py  model.py  resnet_baseline.py  unet.py
src/stone_ocr/preprocessing/: README.md  eroded_correction.py  low_contrast.py  orchestrate.py  reflection_correction.py  shadow_correction.py
src/stone_ocr/train/: README.md  train.py
src/stone_ocr/utils/: utils.py
tests/: test_dataloader.py  test_model.py  test_train_smoke.py
